@@ -4,9 +4,13 @@ i2c-tools CHANGES
 SVN
   decode-vaio: Remove history
   i2cdetect: Support i2c bus passed by name
+             Shorten the usage message
   i2cdump: Support i2c bus passed by name
+           Shorten the usage message
   i2cget: Support i2c bus passed by name
+          Shorten the usage message
   i2cset: Support i2c bus passed by name
+          Shorten the usage message
 
 3.0.1 (2008-04-04)
   Drop the trailing .pl from all perl script names
